--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,11 @@
   </head>
   <body>
     <h1><%= title %></h1>
+  
     <p>Welcome to <%= title %></p>
     <% if(user) { %>
+      <img src="<%= user.photo %>" width='100'>
+      <br>
       <a href="/logout">Log Out</a>
     <% } else { %>
       <a href="/auth/google">Log In With Google</a>
