--- a/views/partials/canvas.ejs
+++ b/views/partials/canvas.ejs
@@ -1,9 +1,9 @@
 <canvas id="paint" width="350" height="350"></canvas>
 
 <div class="colorSelection">
-    <div id="red"></div>
-    <div id="blue"></div>
-    <div id="green"></div>
-    <div id="yellow"></div>
+    <div class="pink" id="#FFA8C4"></div>
+    <div class="blue" id="#72B8CC"></div>
+    <div class="green" id="#3FFF42"></div>
+    <div class="yellow" id="#FFF14A"></div>
 </div>
 
