--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,15 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Picto App</title>
+    <link rel='stylesheet' href='/stylesheets/index.css' />
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div>
+      <h1>PICTO</h1>
+    </div>
+
     <h1><%= title %></h1>
   
     <p>Welcome to Picto</p>
@@ -9,5 +20,4 @@
     <% } else { %>
       <a href="/auth/google">Log In With Google</a>
     <% } %>
-  </body>
-</html>
+<%- include('partials/footer') %>
