--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Picto App</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script defer src="/javascripts/canvas"></script>
+    <script defer src="/javascripts/canvas.js"></script>
   </head>
   <body>
+      
