--- a/views/partials/canvas.ejs
+++ b/views/partials/canvas.ejs
@@ -3,7 +3,7 @@
 <div class="colorSelection">
     <div class="pink" id="#FFA8C4"></div>
     <div class="blue" id="#72B8CC"></div>
-    <div class="green" id="#3FFF42"></div>
+    <div class="green" id="#AAFF9B"></div>
     <div class="yellow" id="#FFF14A"></div>
 </div>
 
