--- a/views/picto/new.ejs
+++ b/views/picto/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
-<form action="/home" method="POST">
+
 <%- include('../partials/canvas') %>
 <br>
-<button class="link-button" type="submit">Submit Picto!</button>
+<button id="submit-picto" class="link-button">Submit Picto!</button>
 </form>
 <%- include('../partials/footer') %>
