--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,10 @@
   <head>
     <title>Picto App</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <script defer src="/javascripts/canvas.js"></script>
   </head>
   <body>
-      
+      <div>
+        <h1 class="logo-bar">PICTO</h1>
+      </div>
