Updates edit-canvas redirects

--- a/views/picto/show.ejs
+++ b/views/picto/show.ejs
@@ -4,6 +4,7 @@
 <p class="user-name"><%= name %></p>
 
 <img class="picto-img" src="<%= picto.imgData %>" alt="Picto">    
-
+<br>
+<a class="link-button" href="/picto/<%= picto._id %>/edit">Edit Picto</a>
 
 <%- include('../partials/footer') %>
