--- a/views/picto/show.ejs
+++ b/views/picto/show.ejs
@@ -5,6 +5,11 @@
 
 <img class="picto-img" src="<%= picto.imgData %>" alt="Picto">    
 <br>
-<a class="link-button" href="/picto/<%= picto._id %>/edit">Edit Picto</a>
+<% if(isCurrentUser){ %>
+   <a class="link-button" href="/picto/<%= picto._id %>/edit">Edit Picto</a> 
+<% } else { %>
+   <a class="link-button" href="/picto/<%= picto._id %>/comments/new">Add a Comment</a> 
+<% } %>
+
 
 <%- include('../partials/footer') %>
