--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     
 
       <div class="login-section">
-        <h1 id="log-in">Log in with your Google Account</h1>
+        <h1 id="log-in">Welcome to Picto :)</h1>
         <a class="link-button" href="/auth/google">Log In With Google</a>
       </div>
 
