--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,9 @@
+:root {
+  font-family: sans-serif;
+}
 
 body, html{
   margin:0;
-  padding: none;
   background-color: #B68192;
   position: relative;
 }
@@ -34,6 +36,16 @@ Styles for Canvas
   background-color: #FFF14A;
 }
 
+/* 
+Page Styles 
+*/
+
+.home-page{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 5vmin;
+  justify-content: center;
+}
 
 .link-button {
   border: solid black 1px;
@@ -46,14 +58,16 @@ Styles for Canvas
 
 .logo-bar {
   background-color: #72B8CC;
+  min-width: 100%;
+  height: 10vmin;
+  padding-left: 2vmin;
+}
+
+.logo-bar > h1 {
+  margin: 0;
   font-family: 'Nothing You Could Do', cursive;
   font-weight: 900;
   font-size: 8vmin;
-  align-content: left;
-  min-width: 100%;
-  height: 10vmin;
-  margin: 0;
-  padding-left: 2vmin;
 }
 
 .user-name {
