--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
   </head>
   <body>
-      <div>
-        <h1 class="logo-bar">PICTO</h1>
+      <div class="logo-bar">
+        <h1>PICTO</h1>
       </div>
