--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,24 +1,25 @@
 <%- include('../partials/header') %>
 <div class="home-page">
 
-    <section class="column">
-        <img class="profile-pic" src="<%= user.profilePic %>" alt="Your Profile Picture" width="80">
-        <p class="user-name"><%= name %></p>
-        <a class="link-button" href="/picto/new">Create a Picto!</a>
-        <h1>Your Pictos</h1>
+    <section class="your-pictos">
+        <header>
+            <h1>Your Pictos</h1>
+            <a class="link-button" href="/picto/new">Create a Picto!</a>
+        </header>
+       
         <% if(pictos.length){ 
     pictos.forEach(function(picto){ %>
-        <a href="/picto/<%= picto._id %>">
+        <a class="picto-link" href="/picto/<%= picto._id %>">
             <img class="picto-img" src="<%= picto.imgData %>" alt="Picto">
         </a>
         <%  }); 
 } %>
     </section>
-    <section class="column">
+    <section class="others-pictos">
         <h1>Other users recent Pictos</h1>
         <% if(otherPictos.length){ 
     otherPictos.forEach(function(picto){ %>
-        <a href="/picto/<%= picto._id %>">
+        <a class="picto-link" href="/picto/<%= picto._id %>">
             <img class="picto-img" src="<%= picto.imgData %>" alt="Picto">
         </a>
         <%  }); 
