--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,9 @@
   <body>
       <div class="logo-bar">
         <h1>PICTO</h1>
+        <div class="account-info"> 
+        <img class="profile-pic" src="<%= user.profilePic %>" alt="Your Profile Picture" width="80">
+        <p class="user-name"><%= user.name %></p>
+        </div>
+        <a href="/logout">Log Out</a>
       </div>
