--- a/views/picto/new.ejs
+++ b/views/picto/new.ejs
@@ -1,11 +1,14 @@
 <%- include('../partials/header') %>
 
+<div class="edit-canvas">
+    <div>
 <%- include('../partials/canvas') %>
 <script defer src="/javascripts/canvas.js"></script>
 <script defer src="/javascripts/new-canvas.js"></script>
 
 <br>
 <button id="submit-picto" class="link-button">Submit Picto!</button>
-
+</div>
+</div>
 
 <%- include('../partials/footer') %>
