--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
       <div class="logo-bar">
-        <a href=""></a><h1>PICTO</h1>
+        <a href="/home"><h1>PICTO</h1></a>
         <div class="account-info"> 
         <img class="profile-pic" src="<%= user.profilePic %>" alt="Your Profile Picture" width="80">
         <p class="user-name"><%= user.name %></p>
