--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title>Picto App</title>
     <link rel='stylesheet' href='/stylesheets/index.css' />
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+    <link rel='icon' href='/images/favicon.ico' type='image/x-icon'>
   </head>
   <body>
       <div class="logo-bar">
