--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,8 @@
   <head>
     <title>Picto App</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">	
+    <link rel='icon' href='/images/favicon.ico' type='image/x-icon'>
   </head>
   <body>
       <div class="logo-bar">
